[gd_scene load_steps=14 format=3 uid="uid://bjcescdvh3a0c"]

[ext_resource type="PackedScene" uid="uid://cogyqppxxlkgl" path="res://Screens/StartScreen/startScreen.tscn" id="1_x2d06"]
[ext_resource type="PackedScene" uid="uid://bn45m7r7brtvc" path="res://Screens/CharacterSelectScreen/characterSelectScreen.tscn" id="2_421i6"]
[ext_resource type="PackedScene" uid="uid://dpts3y5i2m2r7" path="res://Screens/MainGameScreen/mainGameScreen.tscn" id="3_y2ksq"]
[ext_resource type="PackedScene" uid="uid://bndywo7bhj1a2" path="res://LogicHandler/masterLogicHandler.tscn" id="4_u4b2y"]
[ext_resource type="Script" path="res://Boards/PlayerBoard/PlayerShopBoard.gd" id="6_c82q2"]
[ext_resource type="Script" path="res://Boards/PlayerBoard/PlayerCombatBoard.gd" id="7_6d3rq"]
[ext_resource type="PackedScene" uid="uid://7sobnid870y2" path="res://Screens/FightScreen/fightScreen.tscn" id="7_xuxr1"]
[ext_resource type="Script" path="res://Boards/EnemyBoard/EnemyBoard.gd" id="8_jxyjj"]
[ext_resource type="PackedScene" uid="uid://cm6nfxnposfhg" path="res://UI/globalUIElements.tscn" id="9_absy5"]
[ext_resource type="PackedScene" uid="uid://bt53lenppa4jb" path="res://Screens/ShopScreen/shopScreen.tscn" id="10_kpafc"]
[ext_resource type="Script" path="res://Boards/EnemyBoard/npcShopBoard.gd" id="11_kmxdu"]
[ext_resource type="Script" path="res://Boards/PlayerBoard/playerHand.gd" id="12_e7flv"]
[ext_resource type="Script" path="res://Characters/Character.gd" id="13_idjuh"]

[node name="main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="startScreen" parent="." node_paths=PackedStringArray("characterSelectScreen") instance=ExtResource("1_x2d06")]
characterSelectScreen = NodePath("../characterSelectScreen")

[node name="characterSelectScreen" parent="." node_paths=PackedStringArray("mainGameScreen", "globalUIElements") instance=ExtResource("2_421i6")]
mainGameScreen = NodePath("../mainGameScreen")
globalUIElements = NodePath("../globalUIElements")

[node name="mainGameScreen" parent="." node_paths=PackedStringArray("fightScreen", "shopScreen", "playerCombatBoard", "playerShopBoard", "enemyBoard", "playerHand") instance=ExtResource("3_y2ksq")]
visible = false
fightScreen = NodePath("../fightScreen")
shopScreen = NodePath("../shopScreen")
playerCombatBoard = NodePath("../playerCombatBoard")
playerShopBoard = NodePath("../playerShopBoard")
enemyBoard = NodePath("../enemyBoard")
playerHand = NodePath("../playerHand")

[node name="masterLogicHandler" parent="." instance=ExtResource("4_u4b2y")]
unique_name_in_owner = true

[node name="playerShopBoard" type="Node2D" parent="."]
visible = false
script = ExtResource("6_c82q2")

[node name="playerCombatBoard" type="Node2D" parent="." node_paths=PackedStringArray("playerShopBoard")]
visible = false
script = ExtResource("7_6d3rq")
playerShopBoard = NodePath("../playerShopBoard")

[node name="fightScreen" parent="." node_paths=PackedStringArray("playerCombatBoard", "playerHand", "enemyBoard", "fightTimer", "returnFightTimer", "globalUIElements", "mainGameScreen") instance=ExtResource("7_xuxr1")]
visible = false
playerCombatBoard = NodePath("../playerCombatBoard")
playerHand = NodePath("../playerHand")
enemyBoard = NodePath("../enemyBoard")
fightTimer = NodePath("../combatTimer")
returnFightTimer = NodePath("../returnCombatTimer")
globalUIElements = NodePath("../globalUIElements")
mainGameScreen = NodePath("../mainGameScreen")

[node name="enemyBoard" type="Node2D" parent="." node_paths=PackedStringArray("fightScreen")]
visible = false
script = ExtResource("8_jxyjj")
fightScreen = NodePath("../fightScreen")

[node name="combatTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
one_shot = true

[node name="returnCombatTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.6
one_shot = true

[node name="globalUIElements" parent="." instance=ExtResource("9_absy5")]
visible = false

[node name="shopScreen" parent="." node_paths=PackedStringArray("playerShopBoard", "npcShopBoard", "playerHand", "mainGameScreen") instance=ExtResource("10_kpafc")]
unique_name_in_owner = true
visible = false
playerShopBoard = NodePath("../playerShopBoard")
npcShopBoard = NodePath("../npcShopBoard")
playerHand = NodePath("../playerHand")
mainGameScreen = NodePath("../mainGameScreen")

[node name="npcShopBoard" type="Node2D" parent="."]
visible = false
script = ExtResource("11_kmxdu")

[node name="playerHand" type="Node2D" parent="."]
visible = false
script = ExtResource("12_e7flv")

[node name="mainCharacter" type="Node2D" parent="."]
visible = false
script = ExtResource("13_idjuh")

[connection signal="timeout" from="combatTimer" to="fightScreen" method="_on_timer_timeout"]
[connection signal="timeout" from="returnCombatTimer" to="fightScreen" method="_on_return_combat_timer_timeout"]
